--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1008,6 +1008,529 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hero = input('whos your favourite hero')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " name = input('enter your name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = input('enetr your age')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "school = input('enetr your school name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = input('enter your age')\n",
+    "age = int (age)        # casting (change the datatype) in int(),float(),str()\n",
+    "type (age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "x = '100'\n",
+    "y = '-90'\n",
+    "x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = int(x)\n",
+    "y = int(y)\n",
+    "x+y\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one can beleive in story without believing in happend\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('one can beleive in story without believing in happend')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brandon sanderson author bilal mirza\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('brandon sanderson','author','bilal mirza')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'harry pottr'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'harry pottr'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name     # raw output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "harry pottr\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1*2*3*4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,4,sep=\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1#2#3#4&"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,4,sep=\"#\",end =\"&\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i will purchase 10 apple today\n"
+     ]
+    }
+   ],
+   "source": [
+    "#the f string\n",
+    "qty =10\n",
+    "fruit = 'apple'\n",
+    "print('i will purchase',qty,fruit,'today')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digipodium is an educational company.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name =\"digipodium\"\n",
+    "type_of_company = \"educational\"\n",
+    "# enclose your variable within the {}\n",
+    "# to display it's value in the output\n",
+    "print(f\"{name} is an {type_of_company} company.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i will purchse 10 apple today.\n"
+     ]
+    }
+   ],
+   "source": [
+    "qty =\"10\"\n",
+    "fruit =\"apple\"\n",
+    "print(f\"i will purchse {qty} {fruit} today.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building logic with if"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you see a apple seller\n",
+      "purchase 2 kg apples\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('you see a apple seller')\n",
+    "q = input('do you like apples?')\n",
+    "\n",
+    "if q == \"yes\" :\n",
+    "    print ('purchase 2 kg apples')\n",
+    "    if q ==\"no\" :\n",
+    "        print(\"you dont purchase apples\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unacceptable\n"
+     ]
+    }
+   ],
+   "source": [
+    "card = input(\"enter ur credit card number\")\n",
+    "if len(card)==16:\n",
+    "    print(\"you are hacked\")\n",
+    "if len(card)<16:\n",
+    "        print(\"unacceptable\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is greater than 5\n",
+      "this is the info we neede\n",
+      "with this power ,comes great responsibility\n",
+      "the end\n"
+     ]
+    }
+   ],
+   "source": [
+    "x =9\n",
+    "if x> 5:\n",
+    "    print(\"x is greater than 5\")\n",
+    "    print(\"this is the info we neede\")\n",
+    "    print(\"with this power ,comes great responsibility\")\n",
+    "print(\"the end\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building logic with if else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wear long pant\n",
+      "get some exercise outside\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = float(input(\"what is the temp\"))\n",
+    "if temp >70:\n",
+    "    print(\"wear short\")\n",
+    "else:\n",
+    "    print(\"wear long pant\")\n",
+    "print(\"get some exercise outside\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building logic with if_elif_else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"your score\"))\n",
+    "if score >=90:\n",
+    "    letter =\"A\"\n",
+    "elif score >=80:\n",
+    "    letter=\"B\"\n",
+    "elif score>=70:\n",
+    "        letter=\"C\"\n",
+    "elif score>=60:\n",
+    "    letter=\"D\"\n",
+    "elif score >=50:\n",
+    "    letter =\"E\"\n",
+    "else:\n",
+    " letter = \"F\"\n",
+    "print(letter)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "city= input(\"capital of up\")\n",
+    "if city ==\"lucknow\":\n",
+    "  print(\"correct\")\n",
+    "else:\n",
+    "    print(\"incorrect\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# compound statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one linear alternative 1:\n",
+    "if 42 in range(100) :print(\"42\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one linear alternative 2:\n",
+    "x= \"Alice\" if \"Jon\" in \"My name Jonas\" else \"bob\"\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one linear alternative 3:\n",
+    "print(\"42\") if 42 in [22,33,42]else print(\"21\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
